@@ -5,8 +5,9 @@ AUX 04-add-docdir-marker.patch 470 RMD160 c077c32a5de7600d0906742510be5bc4612a0d
 AUX 05-nicelevel.patch 756 RMD160 a26c588c0936f2d3f129aed4c5bbfbada3fef075 SHA1 e1db6fc9c2f450df08162218cb3680da407f3d47 SHA256 a707a592754fadc92a769a488518b355468afa8d57a280e29adff4e8c4384566
 AUX apache2-backuppc.conf 3057 RMD160 c9ad1329302296cc1cbce8c0d48989719872da65 SHA1 36d95931bb6dff59712b7511bf34b6b18486fa11 SHA256 7d832145226cc64386338001709e7fa9da9073b0788d6bf31f25b7d1b4e95a4b
 AUX apache2-backuppc.init 3800 RMD160 9a4a4c55671738447ef131480ca41506baf947b8 SHA1 6ffef133a0b523e4e0d428b8a5282632303d61a2 SHA256 a8b29805a82315f47e0b8e8583c530ba0e4c0b0393001bed4cd2759c2a0c6bb9
-AUX httpd.conf 11857 RMD160 f2eac3a1f88cc5ac7420d33dc4c6e61e7aa49357 SHA1 ce6c673ac2ce5ed11bc640fcc8b50cadbf6d78ca SHA256 20a5e1b7c9c0ccd0627a72c9bc8b4b6febcecf8912a990516373ea5899d33d9c
+AUX httpd.conf 11930 RMD160 613c1636f17c5ff75c4ff2ce81c1f458bbf3dea9 SHA1 613d8f5f361ddbd34235161b1408072f2dc3ba06 SHA256 f81120af47c67afee53621792cfd354b315c62e0f66b493e795b606226f623c9
 DIST BackupPC-3.1.0.tar.gz 474981 RMD160 22d4cb6dd76f846fde489a301852f50e8db1ae1d SHA1 3bd6d637f4f08f2fda44a12668b91d47c4abb0a7 SHA256 49a2744cb9aaf27b298ec3d2e83e46fdb86fb3596922beb3904cb6ae552c148a
 EBUILD backuppc-3.1.0-r2.ebuild 6027 RMD160 59020073b4d7b192dfca2b550ec0f7a3f77df986 SHA1 0f60f08982fdc942360b36e2222f054abff94422 SHA256 8f67e700d80af0654e4e8b79c494cd03afa2ff3d47f7b4f7a07ae44ad92dce81
-MISC ChangeLog 228 RMD160 011727c5e4b5e3c01af5bbfbdaa47373da5ec0c8 SHA1 44be7cd2d4f0ed9f98c9fcb640f37e2067f5b6cf SHA256 7f50b18c97761a7b351b4dc360f87ecbde63952946c9304c91c7b817b8834f89
+EBUILD backuppc-3.1.0-r3.ebuild 6108 RMD160 4e9d2d7b401fe4df64b44ea1b5dfed035409311e SHA1 1c2196e942fd6ba43f580799155aae09e6953e84 SHA256 fbcf20af7c5b68fb09960361f06e9740a5479dbc26efc5611c8897294e9919c3
+MISC ChangeLog 567 RMD160 766dc37d9c34d3f43f63f0ed51ac7663f9323394 SHA1 73af96b1fae67f348d5e169eb3c2aa6dcc94de6f SHA256 288f73f7053dfd458fa14cacfa0eaad9cdc8d0f8922e06266b6d52b9c7f11457
 MISC metadata.xml 505 RMD160 080f7450920b9079a7436a05fb03c1a626c938fc SHA1 d42059212c110b63ee0590a3cc50c86adea635f4 SHA256 2c461cd601ed00f142b5994f2998df2308a47f79c46c1016e83b4109fb9d044e
