@@ -322,6 +322,9 @@ NameVirtualHost *:80
 </Directory>
 
 
+	<IfModule mpm_itk_module>
+		AssignUserID backuppc backuppc
+	</IfModule>
 	<IfModule mpm_peruser_module>
 		ServerEnvironment backuppc backuppc
 	</IfModule>
