@@ -1,3 +1,13 @@
+# ChangeLog for app-backup/backuppc
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+
+*backuppc-3.1.0-r3 (27 Feb 2010)
+
+  27 Feb 2010; <lenno@gentoo.org> +backuppc-3.1.0-r3.ebuild,
+  files/httpd.conf:
+  Merged in Dennis Sivia's patches for enabling support for other Apache
+  MPM's providing uid/gid setting support.
+
 *backuppc-3.1.0-r2 (27 Feb 2010)
 
   27 Feb 2010; <lenno@gentoo.org> -backuppc-3.1.0-r1.ebuild,
